--- a/external-crates/move/Cargo.toml
+++ b/external-crates/move/Cargo.toml
@@ -155,6 +155,7 @@ move-vm-types = { path = "crates/move-vm-types" }
 prover_bytecode = { path = "crates/move-stackless-bytecode", package="move-stackless-bytecode" }
 
 move-native = { path = "solana/move-native" }
+move-to-solana = { path = "solana/move-to-solana" }
 
 [profile.bench]
 debug = true
