--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -50,7 +50,7 @@ jobs:
 
       - name: move-compiler move_check_testsuite tests
         run: |
-          cargo -v test --manifest-path external-crates/move/Cargo.toml -p move-compiler --test move_check_testsuite -- --test-threads=1
+          cargo test --manifest-path external-crates/move/Cargo.toml -p move-compiler --test move_check_testsuite -- --test-threads=1
         env:
           LLVM_SYS_170_PREFIX: ${{ env.MOVE_DEV_PATH }}
           PLATFORM_TOOLS_ROOT: ${{ env.PLATFORM_TOOLS_PATH }}
